@startuml

class Imperio {
    # mineralesDelImperio : Recurso
    # gasDelImperio : Recurso
    # edificios : Edificio
    # fabricasDisponibles : FabricasDisponibles
    # unidades : Unidad

    # construirEdificio(edificio : Edificio, coordenada: Coordenada)
    # construirUnidad(unidad : Unidad, coordenada: Coordenada)
    - comprobarRequisitosMateriales (edificio : Edificio)
    - comprobarRequisitosMaterialesUnidad (unaUnidad : Unidad)
    + abastecerRecursos(mineral : Recurso, gas : Recurso)

}

class Protoss {

    + Protoss()
}

class Zerg {

    + Zerg()

}

class Recurso {
    - cantidad : int

    + Recurso(cantidadInicial : int)
    + consumir(cantidadAConsumir : int)
    + depositar(cantidadADepositar : int)
}

Imperio <|-- Protoss
Imperio <|-- Zerg
Imperio *-- Recurso

note left of Protoss: Tiene los metodos construirEdificio/Unidad\npara cada edificio u unidad
note top of Zerg: Idem Protoss

@enduml